--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ Date: 11/20/2023 </span>
 </h2>
 
 <ol start=23>
-<font face="impact"color="#1C2833"> 
-<li> In Cold Blood (1965) <font color="white"face="Elephant"> by Truman Capote  </font>
+<font face="impact"color="#FF0000"> 
+<li> In Cold Blood (1965) <font color="grey"face="Elephant"> by Truman Capote  </font>
 <li> Alexander Hamilton (2004) <font color="white"face="Elephant"> by Ron Chernow  </font>
 <li> American Prometheus: The Triumph and Tragedy of J. Robert Oppenheimer (2005) <font color="white"face="Elephant"> by Kai Bird  </font>
 <li> A Short History of Nearly Everything (2003) <font color="white"face="Elephant"> by Billy Bryson  </font>
