--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@ Date: 11/20/2023 </span>
 <ol start=23>
 <font face="impact"color="#FF0000"> 
 <li> In Cold Blood (1965) <font color="grey"face="Elephant"> by Truman Capote  </font>
-<li> Alexander Hamilton (2004) <font color="white"face="Elephant"> by Ron Chernow  </font>
+<li> Alexander Hamilton (2004) <font color="grey"face="Elephant"> by Ron Chernow  </font>
 <li> American Prometheus: The Triumph and Tragedy of J. Robert Oppenheimer (2005) <font color="white"face="Elephant"> by Kai Bird  </font>
-<li> A Short History of Nearly Everything (2003) <font color="white"face="Elephant"> by Billy Bryson  </font>
-<li> A Brief History of Time (1988) <font color="white"face="Elephant"> by Stephen Hawking.  </font>
-<li> The Making of the Atomic Bomb (1987) <font color="white"face="Elephant"> by Richard Rhodes  </font>
-<li> Why We Can't Wait (1964) <font color="white"face="Elephant"> by Martin Luther King, Jr.  </font>
-<li> Night (1960) <font color="white"face="Elephant"> by Elie Wiesel </font>
-<li> Endurance: Shackleton's Incredible Voyage (1959) <font color="white"face="Elephant"> by Alfred Lansing  </font>
-<li> Hiroshima (1946) <font color="white"face="Elephant"> by John Hersey  </font>
+<li> A Short History of Nearly Everything (2003) <font color="grey"face="Elephant"> by Billy Bryson  </font>
+<li> A Brief History of Time (1988) <font color="grey"face="Elephant"> by Stephen Hawking.  </font>
+<li> The Making of the Atomic Bomb (1987) <font color="grey"face="Elephant"> by Richard Rhodes  </font>
+<li> Why We Can't Wait (1964) <font color="grey"face="Elephant"> by Martin Luther King, Jr.  </font>
+<li> Night (1960) <font color="grey"face="Elephant"> by Elie Wiesel </font>
+<li> Endurance: Shackleton's Incredible Voyage (1959) <font color="grey"face="Elephant"> by Alfred Lansing  </font>
+<li> Hiroshima (1946) <font color="grey"face="Elephant"> by John Hersey  </font>
 <font color="blue"><h3 align="center"> Fiction </h3></font>
-<li> To Kill a Mockingbird (1960) (1965) <font color="white"face="Elephant"> by Hareper Lee </font>
-<li> Charlotte's Web (1952) <font color="white"face="Elephant"> by E.B. White </font>
-<li> The Hobbit (1937) <font color="white"face="Elephant">  by John Ronald Reuel Tolkien  </font>
-<li> The Great Gatsby (1925) <font color="white"face="Elephant"> by by F. Scott Fitzgerald  </font>
-<li> Moby-Dick (1851) <font color="white"face="Elephant"> by  by Herman Melville   </font>
-<li> The Shining (1977) <font color="white"face="Elephant"> by Stephen King  </font>
-<li> Harry Potter and the Sorcerer's Stone (1997) <font color="white"face="Elephant"> by J.K. Rowling </font>
-<li> The Time Traveler's Wife (2003) <font color="white"face="Elephant">  by Audrey Niffenegger  </font>
-<li> The Da Vinci Code (2003) <font color="white"face="Elephant"> by Dan Brown  </font>
-<li> The Hunger Games (2008) <font color="white"face="Elephant"> by Suzanne Collins  </font>
+<li> To Kill a Mockingbird (1960) (1965) <font color="grey"face="Elephant"> by Hareper Lee </font>
+<li> Charlotte's Web (1952) <font color="grey"face="Elephant"> by E.B. White </font>
+<li> The Hobbit (1937) <font color="grey"face="Elephant">  by John Ronald Reuel Tolkien  </font>
+<li> The Great Gatsby (1925) <font color="grey"face="Elephant"> by by F. Scott Fitzgerald  </font>
+<li> Moby-Dick (1851) <font color="grey"face="Elephant"> by  by Herman Melville   </font>
+<li> The Shining (1977) <font color="grey"face="Elephant"> by Stephen King  </font>
+<li> Harry Potter and the Sorcerer's Stone (1997) <font color="grey"face="Elephant"> by J.K. Rowling </font>
+<li> The Time Traveler's Wife (2003) <font color="grey"face="Elephant">  by Audrey Niffenegger  </font>
+<li> The Da Vinci Code (2003) <font color="grey"face="Elephant"> by Dan Brown  </font>
+<li> The Hunger Games (2008) <font color="grey"face="Elephant"> by Suzanne Collins  </font>
 
 
 
