--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@ Date: 11/20/2023 </span>
 </h2></p>
 
 <ol start=23>
-<font face="impact"color="#FF0000"> 
+
+<font face="impact"size="5"color="#FF0000"> 
 <li> In Cold Blood (1965) <font color="grey"face="Elephant"> by Truman Capote  </font>
 <li> Alexander Hamilton (2004) <font color="grey"face="Elephant"> by Ron Chernow  </font>
-<li> American Prometheus: The Triumph and Tragedy of J. Robert Oppenheimer (2005) <font color="white"face="Elephant"> by Kai Bird  </font>
+<li> American Prometheus: The Triumph and Tragedy of J. Robert Oppenheimer (2005) <font color="grey"face="Elephant"> by Kai Bird  </font>
 <li> A Short History of Nearly Everything (2003) <font color="grey"face="Elephant"> by Billy Bryson  </font>
 <li> A Brief History of Time (1988) <font color="grey"face="Elephant"> by Stephen Hawking.  </font>
 <li> The Making of the Atomic Bomb (1987) <font color="grey"face="Elephant"> by Richard Rhodes  </font>
@@ -27,7 +28,7 @@ Date: 11/20/2023 </span>
 <li> Night (1960) <font color="grey"face="Elephant"> by Elie Wiesel </font>
 <li> Endurance: Shackleton's Incredible Voyage (1959) <font color="grey"face="Elephant"> by Alfred Lansing  </font>
 <li> Hiroshima (1946) <font color="grey"face="Elephant"> by John Hersey  </font>
-<font color="blue"><h3 align="center"> Fiction </h3></font>
+<font color="blue"size="10"><p align="center"> Fiction </p></font>
 <li> To Kill a Mockingbird (1960) (1965) <font color="grey"face="Elephant"> by Hareper Lee </font>
 <li> Charlotte's Web (1952) <font color="grey"face="Elephant"> by E.B. White </font>
 <li> The Hobbit (1937) <font color="grey"face="Elephant">  by John Ronald Reuel Tolkien  </font>
@@ -41,8 +42,7 @@ Date: 11/20/2023 </span>
 
 
 
-
-<hr style="width:50%;border-width:0px;height:6px;background-color:#5D6D7E">
+<hr style="height:6px;border-width:0px;background-color:#CF9FFF">
 
 </html>
-                   </body
+        
